# fastlap

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  pyproject.toml
.github/: CHANGELOG.md
.github/workflows/: CI.yml  ci.yml
assets/: TODO.md
docs/: TODO.md  config.toml
docs/content/: _index.md  about.md  journal.md
examples/: __init__.py  examples.py  visualize_assignment.py
python/: fastlaps.py  init_test.py  lapjv.py
scripts/: publish.sh  test_all.sh  test_python.sh  test_rust.sh
src/: lap.rs  lib.rs  matrix.rs  types.rs  utils.rs
src/lap/: auction.rs  dantzig.rs  hungarian.rs  lapjv.rs  lapmod.rs  subgradient.rs
tests/: test_correctness.py
